Fixed pagination on mobile

--- a/src/components/Pagination/Pagination.module.scss
+++ b/src/components/Pagination/Pagination.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/utils/_mixins.scss';
+
 .pagination {
   display: flex;
   align-items: center;
@@ -10,6 +12,18 @@
     justify-content: center;
   }
 
+  &__list__numbers {
+    display: none;
+
+    @include onTablet {
+      display: block;
+    }
+
+    @include onDesktop {
+      display: block;
+    }
+  }
+
   &__item {
     display: block;
     text-align: center;
@@ -19,9 +33,12 @@
 
     border: 1px solid #b4bdc4;
     border-radius: 48px;
+    transition: transform 0.3s;
 
     &:hover {
       border-color: #0f0f11;
+      transform: scale(1.07);
+      box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.05);
     }
   }
 
@@ -35,7 +52,7 @@
     &:hover {
       color: #000;
       cursor: pointer;
-      transform: scale(1.2);
+      transform: scale(1.07);
     }
   }
 
